feat(orchestrator): add phase 2 state, config, and memory foundation

--- a/package.json
+++ b/package.json
@@ -44,7 +44,14 @@
     "vitest": "^2.1.8"
   },
   "pi": {
-    "extensions": ["./index.ts"],
-    "skills": ["./skills"]
+    "extensions": [
+      "./index.ts"
+    ],
+    "skills": [
+      "./skills"
+    ]
+  },
+  "dependencies": {
+    "@zvec/zvec": "^0.2.0"
   }
 }
