--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,11 @@
 node_modules/
 *.DS_Store
+
+# local secrets
+.env
+.env.*
+!.env.example
+secrets/
+
+# orchestrator runtime artifacts
+.pi/messenger/orchestrator/
